--- a/PlaylistProject/Views/Songs/UpdateSong.cshtml
+++ b/PlaylistProject/Views/Songs/UpdateSong.cshtml
@@ -1,16 +1,16 @@
-﻿@model Songs
+﻿@model Song
 
-<h2>Update @Model.SongName</h2>
+<h2>Update @Model.Name</h2>
 
 @using (Html.BeginForm("UpdateSongsToDatabase", "Songs", "Post"))
 {
     <input asp-for="SongID" type="hidden" value="@Model.SongID" />
 
-    <label asp-for="SongName" class="control-label">SongName</label>
-    <input type="text" name="SongName" class="form-control" value="@Model.SongName" />
+    <label asp-for="Name" class="control-label">SongName</label>
+    <input type="text" name="SongName" class="form-control" value="@Model.Name" />
 
-    <label asp-for="SongArtist" class="control-label">SongArtist</label>
-    <input type="text" name="SongArtist" class="form-control" value="@Model.SongArtist" />
+    <label asp-for="Artist" class="control-label">SongArtist</label>
+    <input type="text" name="SongArtist" class="form-control" value="@Model.Artist" />
 
     <input type="submit" value="Update Song" class="btn btn-primary" />
 }
