--- a/PlaylistProject/Views/Songs/ViewSong.cshtml
+++ b/PlaylistProject/Views/Songs/ViewSong.cshtml
@@ -1,6 +1,6 @@
-﻿@model Songs
+﻿@model Song
 
-<h2>@Model.SongName Information</h2>
+<h2>@Model.Name Information</h2>
 
 
 <table class="table">
@@ -9,12 +9,14 @@
         <th>Title</th>
         <th>Artist</th>
         <th>Genre</th>
+        <th>Video</th>
     </tr>
     <tr>
         <td>@Model.SongID</td>
-        <td>@Model.SongName</td>
-        <td>@Model.SongArtist</td>
-        <td>@Model.GenreName</td>
+        <td>@Model.Name</td>
+        <td>@Model.Artist</td>
+        <td>@Model.Genre</td>
+        <td>@Model.Video</td>
     </tr>
 
 </table>
@@ -22,3 +24,13 @@
 <div style="display: block">
     <a href="/Songs/UpdateSong/@Model.SongID">Update this Song</a>
 </div>
+
+<div style="display: block">
+
+    @using (Html.BeginForm("DeleteSong", "Songs", "Post"))
+    {
+        <input type="hidden" asp-for="SongID" value="@Model.SongID" />
+        <input type="submit" onclick="return confirm('Are you sure?')" value="Delete this song" />
+    }
+</div>
+
