updates need to fix update and delete functionc for CRUD

--- a/PlaylistProject/Views/MyPlaylist/Index.cshtml
+++ b/PlaylistProject/Views/MyPlaylist/Index.cshtml
@@ -1,9 +1,8 @@
 ﻿@{
     ViewData["Title"] = "Playlist";
 }
-<h1>Playlist name successfully updated</h1>
 
-@model MyPlayList
+@model MyPlaylist
 
 <h1>@Model.PlaylistName</h1>
 <form method="post">
