--- a/PlaylistProject/Views/Playlist/Index.cshtml
+++ b/PlaylistProject/Views/Playlist/Index.cshtml
@@ -1,34 +1,51 @@
-﻿@model List<Song>
+﻿@using PlaylistProject.Controllers
+@model MyPlaylist
+
 @{
     ViewData["Title"] = "Playlist";
 }
-<form>
+
+<h1>Your Results</h1>
+<form method="post">
     <label class="form-label d-block">
         Playlist Name
-        <input class="form-control form-control-lg" type="text"
+        <input asp-for="PlaylistName" class="form-control form-control-lg" type="text"
                placeholder="Enter a name for you playlist" aria-label=".form-control-lg
 example">
-    </label> <button class="btn btn-primary btn-lg mb-3">
+    </label> <button asp-action="SavePlaylistOnPost" class="btn btn-primary btn-lg mb-3">
         Save
         playlist
     </button>
-</form>
-<table class="table">
-    <thead>
-        <tr>
-            <th scope="col">Artist</th>
-            <th scope="col">Genre</th>
-            <th scope="col">Name</th>
-        </tr>
-    </thead>
-    <tbody>
-        @foreach (var song in @Model)
-        {
+    <table class="table">
+        <thead>
             <tr>
-                <td>@song.Artist</td>
-                <td>@song.Genre</td>
-                <td>@song.Name</td>
+                <th scope="col">Artist</th>
+                <th scope="col">Genre</th>
+                <th scope="col">Name</th>
+                <th scope="col"></th>
             </tr>
-      }
-    </tbody>
-</table>
+        </thead>
+        <tbody>
+            @foreach (var song in @Model.Songs)
+            {
+                <tr asp-for="@song">
+                    <td aria-hidden="true" class="d-none">
+                        <input asp-for="@song.SongID" />
+                    </td>
+                    <td>
+                        @song.Artist
+                    </td>
+                    <td>@song.Genre</td>
+                    <td>@song.Name</td>
+                    @if (!string.IsNullOrEmpty(song.Video))
+                    {
+                        <td>
+                            <iframe width="560" height="315" src="@song.Video" title="YouTube video player"
+                                    frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-inpicture; web-share" allowfullscreen></iframe>
+                        </td>
+          }
+                </tr>
+            }
+        </tbody>
+    </table>
+</form>
